# RAFT

./: .gitignore  README.md  conda_env.yml  demo.py  download_models.sh  evaluate.py  hubconf.py  hubconf_models.py  pyproject.toml  setup.cfg  setup.py  train.py  train_mixed.sh  train_standard.sh
alt_cuda_corr/: correlation_kernel.cu  setup.py
core/: __init__.py  corr.py  datasets.py  raft.py  update.py
core/modules/: corr.py  extractor.py  update.py
core/utils/: augmentor.py  flow_viz.py  frame_utils.py  utils.py
raft/: __init__.py  corr.py  datasets.py  demo.py  evaluate.py  raft.py  train.py
raft/core/: corr.py  datasets.py  raft.py
raft_optical_flow/: __init__.py
scripts/: download_models.sh
src/raft/: demo.py  evaluate.py  inference.py  train.py
src/raft/core/: __init__.py  corr.py  datasets.py  raft.py
src/raft/core/utils/: __init__.py
