[project]
name = "raft-optical-flow"
version = "0.1.0"
description = "RAFT: Recurrent All-Pairs Field Transforms for Optical Flow"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.pixi.workspace]
channels = [
    "https://prefix.dev/pixi-build-backends",
    "https://prefix.dev/conda-forge",
]
platforms = ["linux-64", "osx-arm64"]
preview = ["pixi-build"]

[tool.pixi.pypi-dependencies]
torch = ">=1.6.0"
torchvision = ">=0.7.0"
opencv-python = ">=4.0.0"
matplotlib = ">=3.0.0"
tensorboard = ">=2.0.0"
scipy = ">=1.5.0"
pillow = ">=8.0.0"

[tool.pixi.dependencies]
raft-optical-flow = { path = "." }
numpy = "<2.0.0"

[tool.pixi.package]
name = "raft-optical-flow"
version = "0.1.0"

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.1.*" }

[tool.pixi.package.host-dependencies]
hatchling = "==1.26.3"

[tool.pixi.package.run-dependencies]
numpy = "<2.0.0"