[metadata]
name = raft
version = 0.0.1
author = Zach Teed
author_email = zachteed@gmail.com
description = RAFT: Recurrent All Pairs Field Transforms for Optical Flow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/princeton-vl/RAFT
project_urls =
    Bug Tracker = https://github.com/princeton-vl/RAFT/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src